--- a/Materias/2S2020/IEE_822/Seminarios/Seminario_02/Apresentacao.tex
+++ b/Materias/2S2020/IEE_822/Seminarios/Seminario_02/Apresentacao.tex
@@ -1,4 +1,4 @@
-% Created 2021-03-09 ter 11:37
+% Created 2021-03-09 ter 15:06
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{caption, subcaption}
@@ -7,15 +7,15 @@
 \addbibresource{/HDD/Org/all_my_refs.bib}
 \usetheme{default}
 \author{Gabriel Petrini}
-\date{06 de Janeiro de 2021}
-\title{Panorama das regularidades empíricas 2 - \textcite{custodio_2013_Why}}
+\date{10 de Março de 2021}
+\title{Estrutura de capital das firmas - \fullcite{custodio_2013_Why}}
 \begin{document}
 
 \maketitle
 \section{\fullcite{custodio_2013_Why}}
-\label{sec:orgad194aa}
+\label{sec:orgf353795}
 
-\begin{frame}[label={sec:orgd54013d}]{Quem são os autores?}
+\begin{frame}[label={sec:org982374f}]{Quem são os autores?}
 \begin{figure}
 \caption{Autores}
 \begin{subfigure}{.3\linewidth}
@@ -45,7 +45,7 @@ Artigos publicados em:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0e95a44}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
+\begin{frame}[label={sec:orga30b545}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
 \alert{Objetivo:} Compreender o porquê da redução da maturidade da dívida de \(\pm\) 13 mil firmas americanas não-financeiras (1976-2008)
 \begin{itemize}
 \item Características das firmas explica pouco
@@ -65,7 +65,7 @@ Artigos publicados em:
 \end{frame}
 
 
-\begin{frame}[label={sec:org8de9697}]{Estrutura do artigo}
+\begin{frame}[label={sec:orgeb73582}]{Estrutura do artigo}
 \begin{block}{Amostra e descrição dos dados}
 \end{block}
 \begin{block}{Redução da maturidade da dívida e características das firmas}
@@ -78,8 +78,8 @@ Artigos publicados em:
 \end{block}
 \end{frame}
 \section{Amostra e descrição dos dados}
-\label{sec:org9a5a1dd}
-\begin{frame}[label={sec:org6b69b21}]{Variável a ser explicada}
+\label{sec:org4840727}
+\begin{frame}[label={sec:org85b7415}]{Variável a ser explicada}
 \begin{figure}[htbp]
 \caption{Dívida com maturidade com mais de 3 anos (\%)}
 \centerline{\includegraphics[width=\textwidth]{figs/Tendencia.png}}
@@ -87,7 +87,7 @@ Artigos publicados em:
 \end{frame}
 
 
-\begin{frame}[label={sec:orge63e05f}]{Firmas americanas não-financeiras (1976-2008, Compustat)}
+\begin{frame}[label={sec:org76b2d09}]{Firmas americanas não-financeiras (1976-2008, Compustat)}
 \begin{center}
 \begin{tabular}{lrr}
 \hline
@@ -117,9 +117,9 @@ Idade & 14 & 9\\
 \end{frame}
 
 \section{Características das firmas}
-\label{sec:org73d53cf}
+\label{sec:org77ecc85}
 
-\begin{frame}[label={sec:org7cf5288}]{Discussão teórica}
+\begin{frame}[label={sec:org2c64df9}]{Discussão teórica}
 \begin{table}[htbp]
 \caption{Expectativas direcionais sobre maturidade da dívida}
 \centering
@@ -151,7 +151,7 @@ Fluxo de caixa & - & Comparação com a mediana\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc66c9c2}]{Conclusões}
+\begin{frame}[label={sec:orgb0891b0}]{Conclusões}
 \begin{table}[htbp]
 \caption{Alguns dos resultados para redução da maturidade da dívida}
 \centering
@@ -177,9 +177,9 @@ Fluxo de caixa & - & Sim, mas insuficiente\\
 \end{frame}
 
 \section{Os fatores de demanda explicam?}
-\label{sec:orgba1ed01}
+\label{sec:orgb991752}
 
-\begin{frame}[label={sec:orge8b1671}]{Estratégia de estimação}
+\begin{frame}[label={sec:org4238d8b}]{Estratégia de estimação}
 \begin{latex}
 \begin{equation}
 \text{\% Div. curto prazo} \sim \text{Carac. Firmas}
@@ -197,7 +197,7 @@ Fluxo de caixa & - & Sim, mas insuficiente\\
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org64e1dcf}]{Resultados e discussão}
+\begin{frame}[label={sec:orgcb9f5aa}]{Resultados e discussão}
 \begin{itemize}
 \item Os coeficientes (exceto lucros anormais) apresentam os sinais esperados
 \begin{itemize}
@@ -214,14 +214,14 @@ Caracterísitcas de demanda (características das firmas) explicam muito pouco a
 \end{frame}
 
 \section{Novas firmas listadas em bolsa}
-\label{sec:orgeb41bb6}
-\begin{frame}[label={sec:org4fd6851}]{Listing vintage effect}
+\label{sec:orgf3d2b6c}
+\begin{frame}[label={sec:org78decca}]{Listing vintage effect}
 \begin{figure}[htbp]
 \caption{Dívida com maturidade com mais de 3 anos (\%)}
 \centerline{\includegraphics[width=\textwidth]{figs/Listing.png}}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org2256689}]{Estratégia de estimação}
+\begin{frame}[label={sec:org1cbca5a}]{Estratégia de estimação}
 \begin{itemize}
 \item Dividem as firmas a partir do ano que foram listadas na bolsa
 \item Ao incluir essa dummy, a tendência passa a ser positiva
@@ -239,9 +239,9 @@ O efeito das novas firmas que entram na bolsa é suficiente para explicar
 \end{frame}
 
 \section{Fatores de oferta}
-\label{sec:orgc318f4d}
+\label{sec:orga56a290}
 
-\begin{frame}[label={sec:org79a9cf8}]{Mudança de ênfase: emissão}
+\begin{frame}[label={sec:org78ee7a6}]{Mudança de ênfase: emissão}
 \begin{center}
 \(\Uparrow\) Emissão \(\Leftrightarrow\) Preferências reveladas \(\Leftrightarrow\) demanda positiva por dívida
 \end{center}
@@ -267,7 +267,7 @@ O efeito das novas firmas que entram na bolsa é suficiente para explicar
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org14c6838},fragile]{Os fatores de oferta}
+\begin{frame}[label={sec:org475f662},fragile]{Os fatores de oferta}
  \begin{center}
 Estrutura K firmas \(\Leftarrow\) oferta de crédito \(\Leftarrow\) demanda do investidor
 \end{center}
@@ -295,8 +295,8 @@ Estrutura K firmas \(\Leftarrow\) oferta de crédito \(\Leftarrow\) demanda do i
 \end{frame}
 
 \section{Conclusão}
-\label{sec:orgd4dbafa}
-\begin{frame}[label={sec:org999dfa2}]{Retomada e implicações}
+\label{sec:org02099e4}
+\begin{frame}[label={sec:org4d9c50b}]{Retomada e implicações}
 Redução da maturidade da dívida das firmas dos EUA:
 \begin{itemize}
 \item Concentrada nas firmas menores
@@ -317,7 +317,7 @@ Redução da maturidade da dívida das firmas dos EUA:
 
 \begin{block}{Limitação?}
 \begin{itemize}
-\item Os metodos adotados são os mais adequados para variáveis qualitativas
+\item Os metodos adotados são os mais adequados para variáveis qualitativas?
 \end{itemize}
 \end{block}
 \end{frame}
